[gd_scene load_steps=7 format=3 uid="uid://dem4vu137w1r8"]

[ext_resource type="Shader" uid="uid://bemrw24a0usm3" path="res://Assets/Outlines/outline.gdshader" id="1_73b0m"]
[ext_resource type="Script" uid="uid://c53fvfxx4jg3n" path="res://basketball.gd" id="1_impb6"]
[ext_resource type="Texture2D" uid="uid://c6xwrrxtweoy1" path="res://Assets/Textures/pixel_basketball_by_fri3ndlygiant_da8zpnz.png" id="2_hvw6b"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_uu6xs"]
bounce = 0.6

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5p6tt"]
shader = ExtResource("1_73b0m")
shader_parameter/color = Color(0.772336, 6.76718e-05, 0.61508, 1)
shader_parameter/width = 5.787
shader_parameter/pattern = 0
shader_parameter/inside = false
shader_parameter/add_margins = true
shader_parameter/number_of_images = Vector2(1, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_r0du0"]
radius = 30.0167

[node name="Basketball" type="RigidBody2D"]
z_index = 5
position = Vector2(625, 296)
physics_material_override = SubResource("PhysicsMaterial_uu6xs")
freeze = true
freeze_mode = 1
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_impb6")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
material = SubResource("ShaderMaterial_5p6tt")
position = Vector2(51, 8)
scale = Vector2(0.15875, 0.16)
texture = ExtResource("2_hvw6b")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visibility_layer = 1536
z_index = 8
position = Vector2(51, 8)
shape = SubResource("CircleShape2D_r0du0")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(49, 29)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
